scrollbar fix, combining components and fixing some file structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
     scrollbar-width: none;  /* Firefox */
   }
   .scrollbar::-webkit-scrollbar {
-    width: 1px;
+    width: 2px;
   }
   .scrollbar::-webkit-scrollbar-track {
     background: transparent;
